--- a/T3kCfg/T3kStateReport/.actionmappage.html
+++ b/T3kCfg/T3kStateReport/.actionmappage.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Cache-Control" content="No-Cache">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<meta name="description" content="Habilience T3k series - State Report View-page ver 2.6">
+<meta name="description" content="Habilience T3k series - State Report View-page ver 2.8c">
 <link rel="stylesheet" type="text/css" href=".common.css">
 <script type="text/javascript"> function t3k_start() {} </script>
 <script type="text/javascript" src="data/T3k.dat"></script>
@@ -145,9 +145,14 @@ function initBody()
 	}
 	
 	str = t3kdata["mouse_profile"];
-	var nD = str.indexOf(',');
-	var selMouse = str.substring(0, nD) * 1;
-	var selMultiTouch = str.substring(nD + 1) * 1;
+	var selMouse = 1;
+	var selMultiTouch = 2;
+	if ( str )
+	{
+		var nD = str.indexOf(',');
+		selMouse = str.substring(0, nD) * 1;
+		selMultiTouch = str.substring(nD + 1) * 1;
+	}
 	
 	var strHTML = "";
 	strHTML += "<div class='g_data'>";
@@ -156,8 +161,12 @@ function initBody()
 	strHTML += "<br>";
 	if ( t3kdata && t3kdata["mouse_profile_1"] )
 		strHTML += makeHTML_ActionMapContent(1, selMouse, selMultiTouch);
+	if ( t3kdata && t3kdata["factory"]["mouse_profile_1"] )
+		strHTML += makeHTML_ActionMapContent(-1, selMouse, selMultiTouch);
 	if ( t3kdata && t3kdata["mouse_profile_2"] )
 		strHTML += makeHTML_ActionMapContent(2, selMouse, selMultiTouch);
+	if ( t3kdata && t3kdata["factory"]["mouse_profile_2"] )
+		strHTML += makeHTML_ActionMapContent(-2, selMouse, selMultiTouch);
 	if ( t3kdata && t3kdata["mouse_profile_3"] )
 		strHTML += makeHTML_ActionMapContent(3, selMouse, selMultiTouch);
 	if ( t3kdata && t3kdata["mouse_profile_4"] )
@@ -281,7 +290,11 @@ function makeHTML_ActionMapContent( nProfile, selMouse, selMultiTouch )
 	var strTLT = "";
 	var strZoom = "";
 	
-	var str = t3kdata["mouse_profile_" + nProfile];
+	var str = "";
+	if ( nProfile >= 0 )
+		str = t3kdata["mouse_profile_" + nProfile];
+	else
+		str = t3kdata["factory"]["mouse_profile_" + -nProfile];
 	var aryProfile = str.split(' ');
 	for ( var idx in aryProfile )
 	{
@@ -336,14 +349,31 @@ function makeHTML_ActionMapContent( nProfile, selMouse, selMultiTouch )
 	
 	var tagHybridMT = (nFuncFlags & 0x0400) ? " style='background:#cccccc;'" : "";
 	
-	var strProfile = nProfile + "";
-	if ( nProfile == selMouse )
-		strProfile += " <span style='color:#ff8899;'>[MouseMode]</span>";
-	if ( nProfile == selMultiTouch )
-		strProfile += " <span style='color:#ff8899'>[MultiTouchMode]</span>";
+	var strProfile;
+	if ( t3kdata["mouse_profile"] )
+	{
+		strProfile = "ActionMap" + nProfile + "";
+		if ( nProfile == selMouse )
+			strProfile += " <span style='color:#ff8899;'>[MouseMode]</span>";
+		else if ( nProfile == selMultiTouch )
+			strProfile += " <span style='color:#ff8899'>[MultiTouchMode]</span>";
+	}
+	else
+	{
+		if ( nProfile == selMouse )
+			strProfile = "MouseMode";
+		else if ( -nProfile == selMouse )
+			strProfile = "[MouseMode]";
+		else if ( nProfile == selMultiTouch )
+			strProfile = "MultiTouchMode";
+		else if ( -nProfile == selMultiTouch )
+			strProfile = "[MultiTouchMode]";
+		else
+			strProfile = "= InstantMode =";
+	}
 	
 	var strHTML = "";
-	strHTML += "<div class='g_title'><span class='g_t_icon'></span>&nbsp;ActionMap" + strProfile + "</div>";
+	strHTML += "<div class='g_title'><span class='g_t_icon'></span>&nbsp;" + strProfile + "</div>";
 	strHTML += "<div class='g_table_wrapper'>";
 	strHTML += "	<div class='g_table'>";
 	strHTML += "		<div class='g_t_ut'>";
