--- a/T3kCfg/T3kStateReport/.extrapage.html
+++ b/T3kCfg/T3kStateReport/.extrapage.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Cache-Control" content="No-Cache">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<meta name="description" content="Habilience T3k series - State Report View-page ver 2.6">
+<meta name="description" content="Habilience T3k series - State Report View-page ver 2.8c">
 <link rel="stylesheet" type="text/css" href=".common.css">
 <script type="text/javascript"> function t3k_start() {} </script>
 <script type="text/javascript" src="data/T3k.dat"></script>
