--- a/T3kCfg/T3kStateReport/index.html
+++ b/T3kCfg/T3kStateReport/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Cache-Control" content="No-Cache">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<meta name="description" content="Habilience T3k series - State Report View-page ver 2.6">
+<meta name="description" content="Habilience T3k series - State Report View-page ver 2.8c">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1, maximum-scale=1">
 <link rel="stylesheet" type="text/css" href=".common.css">
 </head>
