--- a/T3kCfg/T3kStateReport/.mainpage.html
+++ b/T3kCfg/T3kStateReport/.mainpage.html
@@ -35,7 +35,7 @@ function initBody()
 	var strName;
 	var strHTML = "";
 
-	strHTML += "<div class='g_d_line'><span class='g_d_t'>T3k Series State Report ver 2.8c</span></div>";
+    strHTML += "<div class='g_d_line'><span class='g_d_t'>T3k Series State Report ver 2.9.1</span></div>";
 	strHTML += "<br>";
 
 	strHTML += "<div class='g_title'><span class='g_t_icon'></span>&nbsp;Program Information</div>";
